--- a/package.json
+++ b/package.json
@@ -9,18 +9,38 @@
     "vue",
     "motion"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "build": "vite build"
+  },
+  "peerDependencies": {
+    "vue": "^3.5.12"
+  },
+  "dependencies": {
+    "motion": "^11.11.15"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
+    "@types/node": "20",
     "@unocss/eslint-plugin": "^0.62.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.3.0"
   },
   "lint-staged": {
     "*": "eslint --fix"
