--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "vite build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "vue": "^3.5.12"
